# is601-finals

./: .env.sample  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini  readme.md
.github/workflows/: production.yml
app/: celery_app.py  database.py  dependencies.py  main.py
app/celery/: celery_app.py  tasks.py
app/routers/: user_routes.py
app/services/: email_service.py  user_service.py
app/tasks/: account.py
docs/: reflection.md
settings/: config.py
tests/: README.md  conftest.py
tests/integration_tests/: __init__.py  conftest.py  test_email.py
tests/integration_tests/component/: conftest.py
tests/integration_tests/component/test_db/: test_database.py
tests/integration_tests/component/test_models/: test_user_model.py
tests/integration_tests/service/: conftest.py
tests/integration_tests/service/test_db/: test_model.py
tests/integration_tests/service/test_events/: conftest.py  test_celery_rabbitmq_myapp.py
tests/integration_tests/service/test_nginx/: test_users_api.py
tests/integration_tests/test_events/: conftest.py  test_celery_rabbitmq.py  test_celery_rabbitmq_myapp.py  test_celery_worker.py
tests/integration_tests/test_services/: test_user_service.py
tests/scripts/: run_integration_docker_compose.sh
tests/test_services/: test_user_service_create.py
tests/unit_tests/: README.md  __init__.py  conftest.py
tests/unit_tests/test_event_based/: test_tasks.py
tests/unit_tests/test_event_based/test_celery/: test_celery_eager.py  test_celery_memory_mock.py  test_enque_email_verification.py
tests/unit_tests/test_infrastructure/: test_database_async.py  test_database_sync.py
tests/unit_tests/test_services/: test_email_service.py  test_user_service.py
tests/unit_tests/test_utils/: test_nickname_gen.py  test_security.py  test_template_manager.py
