[project]
name = "app"
version = "0.1.0"
description = "Final project for is601 course"
authors = [
    {name = "David Rajnoha",email = "david@rajnoha.eu"}
]
readme = "readme.md"
requires-python = ">=3.13,<4"
dependencies = [
    "aiofiles (>=24.1.0,<25.0.0)",
    "aiomysql (>=0.2.0,<0.3.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "annotated-types (>=0.7.0,<0.8.0)",
    "anyio (>=4.9.0,<5.0.0)",
    "async-sqlalchemy (>=1.0.0,<2.0.0)",
    "async-timeout (>=5.0.1,<6.0.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "certifi (>=2025.1.31,<2026.0.0)",
    "cffi (>=1.17.1,<2.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "coverage (>=7.8.0,<8.0.0)",
    "cryptography (>=44.0.2,<45.0.0)",
    "dnspython (>=2.7.0,<3.0.0)",
    "ecdsa (>=0.19.1,<0.20.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "exceptiongroup (>=1.2.2,<2.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "faker (>=37.1.0,<38.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "greenlet (>=3.2.0,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "h11 (>=0.14.0,<0.15.0)",
    "httpcore (>=1.0.8,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "idna (>=3.10,<4.0)",
    "iniconfig (>=2.1.0,<3.0.0)",
    "mako (>=1.3.10,<2.0.0)",
    "markupsafe (>=3.0.2,<4.0.0)",
    "packaging (>=24.2,<25.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "pluggy (>=1.5.0,<2.0.0)",
    "psycopg (>=3.2.6,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pyasn1 (>=0.4.1,<0.5.0)",
    "pycparser (>=2.22,<3.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "pydantic-core (>=2.33.1,<3.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "pypng (>=0.20220715.0,<0.20220716.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-asyncio (>=0.26.0,<0.27.0)",
    "pytest-cov (>=6.1.1,<7.0.0)",
    "pytest-mock (>=3.14.0,<4.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "six (>=1.17.0,<2.0.0)",
    "sniffio (>=1.3.1,<2.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "starlette (>=0.46.2,<0.47.0)",
    "tomli (>=2.2.1,<3.0.0)",
    "typing-extensions (>=4.13.2,<5.0.0)",
    "uvicorn (>=0.34.1,<0.35.0)",
    "validators (>=0.34.0,<0.35.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "qrcode (>=8.1,<9.0)",
    "rsa (>=4.9.1,<5.0.0)",
    "markdown2 (>=2.5.3,<3.0.0)",
    "python-jose (>=3.4.0,<4.0.0)",
    "celery (>=5.5.1,<6.0.0)",
    "pytest-celery (>=1.2.0,<2.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "aiosmtpd (>=1.4.6,<2.0.0)",
    "backoff (>=2.2.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest-celery = {version = "^1.2.0", extras = ["all"]}

